CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_rel_hist__x/sfrosit_t_indiv_rel_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_indiv_rel_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_indiv_rel_hist</externalName>
    <label>Relationship History</label>
    <pluralLabel>Relationship History</pluralLabel>
</CustomObject>