CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_rel_hist__x/fields/cde_source_vrfyd_rel__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfyd_rel__c</fullName>
    <description>cde_source_vrfyd_rel</description>
    <externalDeveloperName>cde_source_vrfyd_rel</externalDeveloperName>
    <label>How Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>