CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_rel_hist__x/fields/cde_type_rel_indiv__c.field-meta.xml
<CustomField>
    <fullName>cde_type_rel_indiv__c</fullName>
    <description>cde_type_rel_indiv</description>
    <externalDeveloperName>cde_type_rel_indiv</externalDeveloperName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>