CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_rel_hist__x/fields/idn_client_reltd__c.field-meta.xml
<CustomField>
    <fullName>idn_client_reltd__c</fullName>
    <description>idn_client_reltd</description>
    <externalDeveloperName>idn_client_reltd</externalDeveloperName>
    <label>Related Client ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>