CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_rel_hist__x/fields/idn_indiv_rel__c.field-meta.xml
<CustomField>
    <fullName>idn_indiv_rel__c</fullName>
    <description>idn_indiv_rel</description>
    <externalDeveloperName>idn_indiv_rel</externalDeveloperName>
    <label>Relationship ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_REL__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_REL__c</referenceTo>
    <relationshipLabel>Relationship Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_rel_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>