CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_rel_hist__x/fields/idn_indiv_rel_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_indiv_rel_hist__c</fullName>
    <description>idn_indiv_rel_hist</description>
    <externalDeveloperName>idn_indiv_rel_hist</externalDeveloperName>
    <label>Relationship ID history</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>